fix: isolated dark mode code

--- a/src/styles/cyan-atomics.sass
+++ b/src/styles/cyan-atomics.sass
@@ -17,3 +17,15 @@
     width: 100%
     flex-shrink: 0
     flex-grow: 0
+
+.cyan--mode--dark cyan-icon img.onDark
+  display: block
+
+.cyan--mode--dark cyan-icon img.onLight
+  display: none
+
+.cyan--mode--light cyan-icon img.onLight
+  display: block
+
+.cyan--mode--light cyan-icon img.onDark
+  display: none
